--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,6 +9,7 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'pages:home' %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'pages:about' %}">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'posts:post_list' %}">Posts</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'posts:post_create' %}">New Post</a></li>
             </ul>
         </div>
     </div>
